--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">EMMAR_ASSIGNMENT</string>
     <string name="emmar">EMMAR</string>
     <string name="users_list">Users List</string>
+    <string name="assignment">Assignment</string>
 </resources>
